force-app/main/default/objects/Raw_Quotas__c/Raw_Quotas__c.object-meta.xml
<CustomObject>
    <label>Raw Quotas</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Raw Quotas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>