force-app/main/default/objects/Raw_Quotas__c/fields/Owner_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Owner_Hierarchy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Hierarchy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>