force-app/main/default/objects/Raw_Quotas__c/validationRules/Cant_Populate_Both_Quantity_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Populate_Both_Quantity_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>Quantity__c != null  &amp;&amp; Amount__c != null</errorConditionFormula>
    <errorMessage>Can&apos;t Populate Both Quantity &amp; Amount</errorMessage>
</ValidationRule>