force-app/main/default/objects/Raw_Quotas__c/validationRules/Either_Quantity_OR_Amount_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Quantity_OR_Amount_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>Quantity__c == null  &amp;&amp; Amount__c == null</errorConditionFormula>
    <errorMessage>Either Quantity or Amount is required</errorMessage>
</ValidationRule>