force-app/main/default/objects/Raw_Quotas__c/listViews/Quotas_with_Amount.listView-meta.xml
<ListView>
    <fullName>Quotas_with_Amount</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Quotas with Amount</label>
</ListView>