force-app/main/default/objects/Raw_Quotas__c/listViews/Quotas_with_Quantities.listView-meta.xml
<ListView>
    <fullName>Quotas_with_Quantities</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quantity__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Product_Family__c</field>
        <operation>notEqual</operation>
        <value>Products Not Categorized</value>
    </filters>
    <label>Quotas with Quantities</label>
</ListView>